added route to get random word and api calls from the front

--- a/src/models/templates/index.html
+++ b/src/models/templates/index.html
@@ -5,7 +5,7 @@
   <title>Korean Study</title>
 </head>
 <body>
-    <span></span>
-    <input type="text"/>
-    <button>Check</button>
+    <span id="word"></span>
+    <input id="input" type="text"/>
+    <button onclick={check()}>Check</button>
 </body>
