added checking of words and displays previous words with the solution

--- a/src/models/templates/index.html
+++ b/src/models/templates/index.html
@@ -8,4 +8,5 @@
     <span id="word"></span>
     <input id="input" type="text"/>
     <button onclick={check()}>Check</button>
+    <p id="previous-words"></p>
 </body>
