fixed registration bug when form is invalid

--- a/src/users/templates/register.html
+++ b/src/users/templates/register.html
@@ -8,11 +8,7 @@
             {{field}}
             <br/>
         {% endfor %}
-        {% if messages %}
-            {% for message in messages %}
-                {{ message }}
-            {% endfor %}
-        {% endif %}
+        {{form.errors}}
         <input type="submit" value="Register">
     </form>
 </body>
