--- a/src/models/templates/visitor.html
+++ b/src/models/templates/visitor.html
@@ -6,8 +6,8 @@
   <title>Korean Study</title>
 </head>
 <body>
-  <div>
-    <a class="logout-button" href="/user/user_logout">Logout</a>
+  <div class="top-bar">
+    <a class="login-top-bar" href="/user/user_login">Login</a>
   </div>
   <div class="content">
     <span id="word"></span>
